# spartus-live-dashboard

./: .gitignore  Feature_Upgrade.md  Fine_Tuning_Design_Plan.md  Live_Fine_Tuning_Design_Plan.md  README.md  SPARTUS_DATA_PIPELINE.md  SPARTUS_LIVE_DASHBOARD_BUILD.md  SPARTUS_TRADING_AI.md  SPARTUS_TRAINING_DASHBOARD.md  SPARTUS_TRAINING_METHODOLOGY.md  SpartusBench_Benchmark_Tool.md  To_Be_Fixed.md  Training_Upgrade_Plan.md  install.bat  install.sh  launch.bat  launch.sh  launch_benchmark.bat  launch_tensorboard.bat  launch_training.bat  launch_training.ps1  main.py  pyproject.toml  requirements.txt
live_dashboard/: .gitattributes  .gitignore  README.md  install.sh  launch.sh  main.py  mcp_server.py  pyproject.toml  requirements.txt
live_dashboard/config/: default_config.yaml  live_config.py  user_settings.json
live_dashboard/core/: auto_updater.py  broker_constraints.py  feature_pipeline.py  inference_engine.py  live_normalizer.py  model_loader.py  mt5_bridge.py  risk_manager.py  startup_validator.py  trade_executor.py
live_dashboard/dashboard/: main_window.py  tab_alerts.py  tab_analytics.py  tab_live_status.py  tab_mcp_settings.py  tab_model_state.py  tab_performance.py  tab_settings.py  tab_trade_journal.py  update_dialog.py  widgets.py
live_dashboard/docs/: LINUX_BRIDGE.md
live_dashboard/features/: account_features.py  calendar.py  correlation.py  memory_features.py  session_micro.py
live_dashboard/memory/: trading_memory.py  trend_tracker.py
live_dashboard/mt5_scripts/: CalendarBridge.mq5
live_dashboard/reports/: week1_demo_performance.md
(+140 files in other folders)
